--- a/CodeWars/CodeWarsGenerator/CodeWarsGenerator.csproj
+++ b/CodeWars/CodeWarsGenerator/CodeWarsGenerator.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\CodeWarsApi\CodeWarsApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Generated\" />
+  </ItemGroup>
+
 </Project>
