--- a/CodeWars/KataTests/KataTests.csproj
+++ b/CodeWars/KataTests/KataTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kata\Kata.csproj" />
+  </ItemGroup>
+
 </Project>
